Each crystal has now been assigned a random number for the game and that number will now be pushed into the #score.

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -24,6 +24,10 @@ h1 {
 
 }
 
+p {
+	margin-top: 5px;
+}
+
 #rules {
 	margin-top: 40px;
 	
@@ -41,6 +45,11 @@ h1 {
 #crystals {
 	margin-top: 30px;
 }
+
+#total {
+	margin-top: 60px;
+}
+
 
 #score {
 	margin-top: 10px;
