--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -19,9 +19,18 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+body {
+	background-image: url("https://graphicburger.com/wp-content/uploads/2014/02/Seamless-Polygon-Backgrounds-Vol2-full.jpg");
+	background-size: 100%;
+}
+
 h1 {
 	font-size: 60px;
-
+	margin-top: 20px;
+	background-color: white;
+	opacity: .9;
+	font-family: 'Lobster', cursive;
+	text-align: center;
 }
 
 p {
@@ -30,16 +39,30 @@ p {
 
 #rules {
 	margin-top: 40px;
-	
+	background-color: rgb(25, 223, 223);
+	font-family: 'Indie Flower', cursive;
+	font-size: 25px;
+	padding: 20px;
 }
 
 #number {
-	font-size: 30px;
-	margin-top: 30px;
+	font-size: 65px;
+	margin-top: 70px;
+	background-color: white;
+	text-align: center;
+	height: 100px;
+	font-family: 'Montserrat', sans-serif;
+	border: solid black 3px;
+	box-shadow: 5px 5px;
 }
 
 #scoreboard {
-	margin-top: 30px;
+	margin-top: 70px;
+	background-color: white;
+	border: solid black 3px;
+	box-shadow: 5px 5px;
+	padding: 15px;
+	padding-left: 30px;
 }
 
 #crystals {
@@ -48,9 +71,18 @@ p {
 
 #total {
 	margin-top: 60px;
+	background-color: white;
+	text-align: center;
 }
 
 
 #score {
 	margin-top: 10px;
+	font-size: 60px;
+	background-color: white;
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	border: solid black 3px;
+	box-shadow: 5px 5px;
+	margin-bottom: 100px;
 }
